# markdown-note-organizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mdnotes/: __init__.py  index.py  parser.py  search.py
tests/: test_index.py  test_parser.py  test_search.py
